I am now successfully getting tiles to be pulled from my custom server, but they are currently misaligned. Will fix this in the next patch

--- a/static/css/base/styles.css
+++ b/static/css/base/styles.css
@@ -846,10 +846,11 @@ h4 { font-size: var(--font-size-lg); }
 .navbar .logo a .logo-img {
     height: 50px;
     width: auto;
+    scale: 1.4;
     margin-right: 0;
     margin-left: -10px;
-    filter: invert(100%);
-    -webkit-filter: invert(100%);
+    /*filter: invert(100%);
+    -webkit-filter: invert(100%);*/
 }
 .navbar .logo a h3 {
     margin: 0;
